--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
-<html lang="ja">
+<!DOCTYPE html PUBLIC "-//W3C//DTD  HTML 3.2 Final//EN">
+<HTML>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>KusaReMKN</title>
-	<link rel="preload" href="/font/Saitamaar.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="/css/new.css" as="style" type="text/css">
-	<link rel="stylesheet" href="/css/new.css" type="text/css">
-</head>
+<HEAD>
+	<META http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<TITLE>KUSAREMKN.GTHUB.IO</TITLE>
+</HEAD>
 
-<body>
-	<header>
-		<h1>KusaReMKN</h1>
-	</header>
-	<p class="greeting">
-		あついね。
-	</p>
-</body>
+<BODY>
+	<H1>KUSAREMKN.GITHUB.IO</H1>
+	<P>
+		夏です。
+		暑いね。
+	</P>
+	<P>
+		<A href="//validator.w3.org/check?uri=referer">
+			<IMG src="//www.w3.org/Icons/valid-html32" height="31" width="88">
+		</A>
+	</P>
+</BODY>
 
-</html>
+</HTML>
