--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD  HTML 3.2 Final//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
 
 <HEAD>
@@ -9,9 +9,34 @@
 <BODY>
 	<H1>KUSAREMKN.GITHUB.IO</H1>
 	<P>
-		夏です。
+		夏だよ。
 		暑いね。
 	</P>
+	<H2>KusaReMKN ってなにもの</H2>
+	<IMG src="/img/mkn.png" width="100" height="100" alt="KusaReMKN">
+	<P>
+		きっとかわいいおんなのこ。
+		今日もいっぱい食べていっぱいねてたよ。
+	</P>
+	<H3>なにが好きなの？</H3>
+	<P>
+		プログラミングごっこが好きだよ。
+		プログラミングじゃなくてプログラミングごっこだよ。
+	</P>
+	<H3>なにができるの？</H3>
+	<P>
+		C 言語と和解した気になっているよ。
+		最近は C 言語よりも JavaScript とか PHP を使いがちだよ。
+		でも JavaScript とか PHP の方はあんまり得意じゃないみたい。
+		よく考えたら C 言語もあんまり得意じゃなかったよ。
+	</P>
+	<H3>つよつよなの？</H3>
+	<P>
+		暑さにやられてよわよわだよ。
+		暑さにやられてなくてもよわよわだよ。
+		いつかつよつよになりたいね。
+	</P>
+	<HR>
 	<P>
 		<A href="//validator.w3.org/check?uri=referer">
 			<IMG src="//www.w3.org/Icons/valid-html32" height="31" width="88">
