--- a/index.html
+++ b/index.html
@@ -2,46 +2,46 @@
 <HTML>
 
 <HEAD>
-	<META http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<TITLE>KUSAREMKN.GTHUB.IO</TITLE>
+  <META http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <TITLE>KUSAREMKN.GTHUB.IO</TITLE>
 </HEAD>
 
 <BODY>
-	<H1>KUSAREMKN.GITHUB.IO</H1>
-	<P>
-		夏も終わりそうだよ。
-		まだ少し暑いね。
-	</P>
-	<H2>KusaReMKN ってなにもの</H2>
-	<IMG src="/img/mkn.png" width="100" height="100" alt="KusaReMKN">
-	<P>
-		きっとかわいいおんなのこ。
-		今日もいっぱい食べていっぱいねてたよ。
-	</P>
-	<H3>なにが好きなの？</H3>
-	<P>
-		プログラミングごっこが好きだよ。
-		プログラミングじゃなくてプログラミングごっこだよ。
-	</P>
-	<H3>なにができるの？</H3>
-	<P>
-		C 言語と和解した気になっているよ。
-		最近は C 言語よりも JavaScript とか PHP を使いがちだよ。
-		でも JavaScript とか PHP の方はあんまり得意じゃないみたい。
-		よく考えたら C 言語もあんまり得意じゃなかったよ。
-	</P>
-	<H3>つよつよなの？</H3>
-	<P>
-		暑さにやられてよわよわだよ。
-		暑さにやられてなくてもよわよわだよ。
-		いつかつよつよになりたいね。
-	</P>
-	<HR>
-	<P>
-		<A href="//validator.w3.org/check?uri=referer">
-			<IMG src="//www.w3.org/Icons/valid-html32" height="31" width="88">
-		</A>
-	</P>
+  <H1>KUSAREMKN.GITHUB.IO</H1>
+  <P>
+    もう秋だよ。
+    少し肌寒くなってきたね。
+  </P>
+  <H2>KusaReMKN ってなにもの</H2>
+  <IMG src="/img/mkn.png" width="100" height="100" alt="KusaReMKN">
+  <P>
+    きっとかわいいおんなのこ。
+    今日もいっぱい食べていっぱいねてたよ。
+  </P>
+  <H3>なにが好きなの？</H3>
+  <P>
+    プログラミングごっこが好きだよ。
+    プログラミングじゃなくてプログラミングごっこだよ。
+  </P>
+  <H3>なにができるの？</H3>
+  <P>
+    C 言語と和解した気になっているよ。
+    最近は C 言語よりも JavaScript とか PHP を使いがちだよ。
+    でも JavaScript とか PHP の方はあんまり得意じゃないみたい。
+    よく考えたら C 言語もあんまり得意じゃなかったよ。
+  </P>
+  <H3>つよつよなの？</H3>
+  <P>
+    暑さにやられてよわよわだよ。
+    暑さにやられてなくてもよわよわだよ。
+    いつかつよつよになりたいね。
+  </P>
+  <HR>
+  <P>
+    <A href="//validator.w3.org/check?uri=referer">
+      <IMG src="//www.w3.org/Icons/valid-html32" height="31" width="88">
+    </A>
+  </P>
 </BODY>
 
 </HTML>
