--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   </P>
   <H3>つよつよなの？</H3>
   <P>
-    暑さにやられてよわよわだよ。
-    暑さにやられてなくてもよわよわだよ。
+    寒さにやられてよわよわだよ。
+    寒さにやられてなくてもよわよわだよ。
     いつかつよつよになりたいね。
   </P>
   <HR>
