--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <BODY>
   <H1>KUSAREMKN.GITHUB.IO</H1>
   <P>
-    もう冬だよ。
-    寒くなってきたね。
+    もう冬も終わりだよ。
+    まだまだ寒いのにね。
   </P>
   <H2>KusaReMKN ってなにもの</H2>
   <IMG src="/img/mkn.png" width="100" height="100" alt="KusaReMKN">
