--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <HEAD>
   <META http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <TITLE>KUSAREMKN.GTHUB.IO</TITLE>
+  <TITLE>KUSAREMKN.GITHUB.IO</TITLE>
 </HEAD>
 
 <BODY>
@@ -13,7 +13,7 @@
     まだまだ寒いのにね。
   </P>
   <H2>KusaReMKN ってなにもの</H2>
-  <IMG src="/img/mkn.png" width="100" height="100" alt="KusaReMKN">
+  <IMG src="./img/mkn.png" width="100" height="100" alt="KusaReMKN">
   <P>
     きっとかわいいおんなのこ。
     今日もいっぱい食べていっぱいねてたよ。
