--- a/bm.html
+++ b/bm.html
@@ -67,10 +67,22 @@
 </UL>
 <HR>
 <H2>データ構造</H2>
+<H3>赤黒木</H3>
 <UL>
 <LI>James Paton,
 	<A HREF="http://pages.cs.wisc.edu/~paton/readings/Red-Black-Trees/">
 		Red-Black Trees
+	</A>
+<LI>OK おじさん,
+	<A HREF="http://wwwa.pikara.ne.jp/okojisan/rb-tree/">
+		Red-Black Tree by Java & Python -- これで分かった赤黒木
+	</A>
+</UL>
+<H3>AVL 木</H3>
+<UL>
+<LI>OK おじさん,
+	<A HREF="http://wwwa.pikara.ne.jp/okojisan/avl-tree/">
+		AVL Tree by Java & Python -- これで分かったAVL木
 	</A>
 </UL>
 <HR>
