--- a/bm.html
+++ b/bm.html
@@ -39,6 +39,14 @@
 	<A HREF="https://yoshikawaweb.com/element/">
 		HTML5 入れ子チートシート
 	</A>
+<LI>Daniel Stenberg,
+	<A HREF="https://http2-explained.haxx.se/ja">
+		HTTP/2 explained
+	</A> (日本語)
+<LI>Daniel Stenberg,
+	<A HREF="https://http3-explained.haxx.se/ja">
+		HTTP/3 explained
+	</A> (日本語)
 </UL>
 <HR>
 <H2>Esperanto</H2>
