--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <BODY>
   <H1>KUSAREMKN.GITHUB.IO</H1>
   <P>
-    もう冬も終わりだよ。
-    まだまだ寒いのにね。
+    もう春だよ。
+    あっという間だね。
   </P>
   <H2>KusaReMKN ってなにもの</H2>
   <IMG src="./img/mkn.png" width="100" height="100" alt="KusaReMKN">
@@ -32,9 +32,7 @@
   </P>
   <H3>つよつよなの？</H3>
   <P>
-    寒さにやられてよわよわだよ。
-    寒さにやられてなくてもよわよわだよ。
-    いつかつよつよになりたいね。
+    まさか。
   </P>
   <HR>
   <P>
